finalize README.md

--- a/portfolio_rag_assistant.ipynb
+++ b/portfolio_rag_assistant.ipynb
@@ -191,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "qfaD_kvqwI4D"
       },
@@ -222,7 +222,7 @@
         "      if f[\"type\"] == \"blob\" and f[\"path\"].endswith(file_types)\n",
         "  ]\n",
         "  if not files:\n",
-        "    print(f\"В репозитории не найдень файлов с раширениями {file_types}\")\n",
+        "    print(f\"В репозитории не найдены файлы с раширениями {file_types}\")\n",
         "    return\n",
         "\n",
         "  for f in tqdm(files, desc=\"Скачивание файлов\"):\n",
@@ -751,7 +751,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": null,
       "metadata": {
         "id": "21Cq0LHwlx3O"
       },
@@ -798,7 +798,7 @@
         "# Функция для цепочки ассистента\n",
         "def run_answer_chain(prompt: PromptTemplate, query: str, general_context: str,\n",
         "                     project_map: dict, files_to_read: list, llm_model,\n",
-        "                     context_lenght = 100000, context_ratio = 2.5) -> str:\n",
+        "                     context_length = 100000, context_ratio = 2.5) -> str:\n",
         "  \"\"\"\n",
         "  Запускает цепочку ассистента для получения ответа\n",
         "  \"\"\"\n",
@@ -813,7 +813,7 @@
         "      # Проверка документа на существование в списке\n",
         "      if file in project_map:\n",
         "        doc_tokens = len(project_map[file]) / context_ratio\n",
-        "        if total_tokens + doc_tokens < context_lenght:\n",
+        "        if total_tokens + doc_tokens < context_length:\n",
         "          docs.append(project_map[file])\n",
         "          total_tokens += doc_tokens\n",
         "        else:\n",
